feat:  tidying the seriea and serieb folders
